tests/errors/Egor/recovery/test35.c

void main()
{
	int a = 5
	int b = 10
	printid(a)
	printid(b)
}